--- a/contact/index.html
+++ b/contact/index.html
@@ -358,8 +358,9 @@ StatCounter"></a></div></noscript>
   <div class="article-style" itemprop="articleBody"><p><strong>Address:</strong><br />
 Yale University<br />
 Department of Economics<br />
-28 Hillhouse Avenue, Room 304<br />
-New Haven, CT 06520-8268<br />
+451 College St. Room 210<br />
+New Haven, CT<br />
+06520-8268<br />
 Email: eduardo.davila@yale.edu<br />
 ​Web: <a href="www.eduardodavila.com" target="_blank">www.eduardodavila.com</a></p>
 </div>
