--- a/discussions/index.html
+++ b/discussions/index.html
@@ -355,7 +355,11 @@ StatCounter"></a></div></noscript>
 
 <div class="universal-wrapper">
   
-  <div class="article-style" itemprop="articleBody"><p><strong>(In)efficiency in Information Acquisition and Aggregation through Prices, <a href="davila_discussion_psv.pdf" target="_blank">SLIDES</a></strong><br />
+  <div class="article-style" itemprop="articleBody"><p><strong>Bank Runs, Fragility, and Credit Easing, <a href="davila_discussion_amador_bianchi.pdf" target="_blank">SLIDES</a></strong><br />
+by Manuel Amador and Javier Bianchi
+Bank of Canada Workshop on Monetary Policy Research, 2022</p>
+
+<p><strong>(In)efficiency in Information Acquisition and Aggregation through Prices, <a href="davila_discussion_psv.pdf" target="_blank">SLIDES</a></strong><br />
 by Alessandro Pavan, Savitar Sundaresan, and Xavier Vives
 Econometric Society Meetings, 2022</p>
 
