--- a/research/index.html
+++ b/research/index.html
@@ -373,29 +373,29 @@ StatCounter"></a></div></noscript>
 
 <p><strong><a href="davila_hebert_corporate_taxation.pdf" target="_blank">Optimal Corporate Taxation under Financial Frictions</a></strong>, with Benjamin Hébert. <em>The Review of Economic Studies</em>, July 2022. Forthcoming. <strong><a href="bibtex/davila_hebert_optimal_corporate_taxation.txt" target="_blank">BibTeX</a></strong>.</p>
 
+<p><strong><a href="davila_goldstein_optimal_di.pdf" target="_blank">Optimal Deposit Insurance</a></strong>, with Itay Goldstein. <em>Journal of Political Economy</em>, May 2022. Forthcoming. <strong><a href="bibtex/davila_goldstein_optimal_deposit_insurance.txt" target="_blank">BibTeX</a></strong>.</p>
+
 <h1 id="under-revision">Under Revision</h1>
 
-<p><strong><a href="davila_walther_prudential_beliefs.pdf" target="_blank">Prudential Policy with Distorted Beliefs</a></strong>, with Ansgar Walther, June 2022</p>
-
-<p><strong><a href="davila_goldstein_optimal_di.pdf" target="_blank">Optimal Deposit Insurance</a></strong>, with Itay Goldstein, May 2022</p>
+<p><strong><a href="davila_walther_prudential_beliefs.pdf" target="_blank">Prudential Policy with Distorted Beliefs</a></strong>, with Ansgar Walther, June 2022.</p>
 
 <p><strong><a href="davila_parlatore_volatility.pdf" target="_blank">Volatility and Informativeness</a></strong>, with Cecilia Parlatore, August 2022.</p>
 
 <p><strong><a href="davila_parlatore_identifying.pdf" target="_blank">Identifying Price Informativeness</a></strong>, with Cecilia Parlatore, April 2022. Code and data are available <strong><a href="https://github.com/edavila/identifying_price_informativeness" target="_blank">here</a></strong>.</p>
 
+<p><strong><a href="davila_walther_corrective.pdf" target="_blank">Corrective Regulation with Imperfect Instruments</a></strong>, with Ansgar Walther, May 2022</p>
+
 <h1 id="working-papers">Working Papers</h1>
 
-<p><strong><a href="davila_schaab_welfare_heterogeneous.pdf" target="_blank">Welfare Assessments with Heterogeneous Individuals</a></strong>, with Andreas Schaab, June 2022</p>
+<p><strong><a href="davila_schaab_welfare_heterogeneous.pdf" target="_blank">Welfare Assessments with Heterogeneous Individuals</a></strong>, with Andreas Schaab, September 2022. <strong><a href="user_guide_DS_weights_analytics.pdf" target="_blank">User Guide</a></strong>. <strong><a href="https://github.com/schaab-lab/DS-weights" target="_blank">Github Repository</a></strong></p>
 
-<p><strong><a href="davila_schaab_timeless_ramsey.pdf" target="_blank">Optimal Monetary Policy with Heterogeneous Agents: A Timeless Ramsey Approach</a></strong>, with Andreas Schaab, June 2022</p>
+<p><strong><a href="davila_schaab_timeless_ramsey.pdf" target="_blank">Optimal Monetary Policy with Heterogeneous Agents: A Timeless Ramsey Approach</a></strong>, with Andreas Schaab, July 2022.</p>
 
-<p><strong><a href="davila_walther_corrective.pdf" target="_blank">Corrective Regulation with Imperfect Instruments</a></strong>, with Ansgar Walther, April 2022</p>
+<p><strong><a href="davila_graves_parlatore_value_arbitrage.pdf" target="_blank">The Value of Arbitrage</a></strong>, with Daniel Graves and Cecilia Parlatore, August 2022.</p>
 
-<p><strong><a href="davila_graves_parlatore_value_arbitrage.pdf" target="_blank">The Value of Arbitrage</a></strong>, with Daniel Graves and Cecilia Parlatore, August 2022</p>
+<p><strong>​<a href="davila_philippon_inc_shocks.pdf" target="_blank">Incompleteness Shocks</a></strong>, with Thomas Philippon, December 2017. <em>(substantially revised draft coming soon)</em></p>
 
-<p><strong>​<a href="davila_philippon_inc_shocks.pdf" target="_blank">Incompleteness Shocks</a></strong>, with Thomas Philippon, December 2017 <sub>(substantially revised draft coming soon) <sub></p>
-
-<p><strong><a href="davila_weymuller_optimal_joint_bond.pdf" target="_blank">Optimal Joint Bond Design</a></strong>, with Charles-Henri Weymuller, September 2017 <sub> (substantially revised draft coming soon) <sub></p>
+<p><strong><a href="davila_weymuller_optimal_joint_bond.pdf" target="_blank">Optimal Joint Bond Design</a></strong>, with Charles-Henri Weymuller, September 2017. <em>(substantially revised draft coming soon)</em></p>
 
 <h1 id="inactive-working-papers">Inactive Working Papers</h1>
 
