--- a/discussions/index.html
+++ b/discussions/index.html
@@ -355,7 +355,11 @@ StatCounter"></a></div></noscript>
 
 <div class="universal-wrapper">
   
-  <div class="article-style" itemprop="articleBody"><p><strong>Bank Runs, Fragility, and Credit Easing, <a href="davila_discussion_amador_bianchi.pdf" target="_blank">SLIDES</a></strong><br />
+  <div class="article-style" itemprop="articleBody"><p><strong>Socially Responsible Divestment, <a href="davila_discussion_els.pdf" target="_blank">SLIDES</a></strong><br />
+by by Alex Edmans, Doron Levit, and Jan Schneemeier
+NBER Corporate Finance Fall Meeting, 2022</p>
+
+<p><strong>Bank Runs, Fragility, and Credit Easing, <a href="davila_discussion_amador_bianchi.pdf" target="_blank">SLIDES</a></strong><br />
 by Manuel Amador and Javier Bianchi
 Bank of Canada Workshop on Monetary Policy Research, 2022</p>
 
@@ -369,7 +373,7 @@ FIN-FIRE-Workshop, 2021</p>
 
 <p><strong>Delayed Crises and Slow Recoveries, <a href="davila_discussion_liu_wang_yang.pdf" target="_blank">SLIDES</a></strong><br />
 by Xuewen Liu, Pengfei Wang, and Zhongchao Yang
-China International Conference in Finance (CICF), 2021</p>
+China International Conference in Finance, 2021</p>
 
 <p><strong>Is There Too Much Benchmarking in Asset Management?, <a href="davila_discussion_kklp.pdf" target="_blank">SLIDES</a></strong><br />
 by Anil Kashyap, Natalia Kovrijnykh, Jian Li, and Anna Pavlova
