--- a/research/index.html
+++ b/research/index.html
@@ -369,7 +369,7 @@ StatCounter"></a></div></noscript>
 
 <p><strong><a href="davila_parlatore_trading_costs.pdf" target="_blank">Trading Costs and Informational Efficiency</a></strong>, with Cecilia Parlatore. <em>The Journal of Finance</em>, Volume 76, Issue 3, June 2021, Pages 1471-1539. <strong><a href="https://onlinelibrary.wiley.com/doi/abs/10.1111/jofi.13008" target="_blank">Link</a></strong>, <strong><a href="bibtex/davila_parlatore_trading_costs.txt" target="_blank">BibTeX</a></strong>.</p>
 
-<p><strong><a href="davila_optimal_ftt.pdf" target="_blank">Optimal Financial Transaction Taxes</a></strong>. <em>The Journal of Finance</em>, November 2021. Forthcoming. <strong><a href="bibtex/davila_optimal_ftt.txt" target="_blank">BibTeX</a></strong>.</p>
+<p><strong><a href="davila_optimal_ftt.pdf" target="_blank">Optimal Financial Transaction Taxes</a></strong>. <em>The Journal of Finance</em>, November 2021. Forthcoming. <strong><a href="https://onlinelibrary.wiley.com/doi/10.1111/jofi.13188" target="_blank">Link</a></strong>, <strong><a href="bibtex/davila_optimal_ftt.txt" target="_blank">BibTeX</a></strong>.</p>
 
 <p><strong><a href="davila_hebert_corporate_taxation.pdf" target="_blank">Optimal Corporate Taxation under Financial Frictions</a></strong>, with Benjamin Hébert. <em>The Review of Economic Studies</em>, July 2022. Forthcoming. <strong><a href="https://doi.org/10.1093/restud/rdac068" target="_blank">Link</a></strong>, <strong><a href="bibtex/davila_hebert_optimal_corporate_taxation.txt" target="_blank">BibTeX</a></strong>.</p>
 
