--- a/research/index.html
+++ b/research/index.html
@@ -375,11 +375,11 @@ StatCounter"></a></div></noscript>
 
 <p><strong><a href="davila_goldstein_optimal_di.pdf" target="_blank">Optimal Deposit Insurance</a></strong>, with Itay Goldstein. <em>Journal of Political Economy</em>, May 2022. Forthcoming. <strong><a href="bibtex/davila_goldstein_optimal_deposit_insurance.txt" target="_blank">BibTeX</a></strong>.</p>
 
+<p><strong><a href="davila_parlatore_volatility.pdf" target="_blank">Volatility and Informativeness</a></strong>, with Cecilia Parlatore. <em>Journal of Financial Economics</em>, August 2022. Forthcoming. <strong><a href="bibtex/davila_parlatore_volatility.txt" target="_blank">BibTeX</a></strong>.</p>
+
 <h1 id="under-revision">Under Revision</h1>
 
 <p><strong><a href="davila_walther_prudential_beliefs.pdf" target="_blank">Prudential Policy with Distorted Beliefs</a></strong>, with Ansgar Walther, June 2022.</p>
-
-<p><strong><a href="davila_parlatore_volatility.pdf" target="_blank">Volatility and Informativeness</a></strong>, with Cecilia Parlatore, August 2022.</p>
 
 <p><strong><a href="davila_parlatore_identifying.pdf" target="_blank">Identifying Price Informativeness</a></strong>, with Cecilia Parlatore, April 2022. Code and data are available <strong><a href="https://github.com/edavila/identifying_price_informativeness" target="_blank">here</a></strong>.</p>
 
