--- a/research/index.html
+++ b/research/index.html
@@ -375,7 +375,7 @@ StatCounter"></a></div></noscript>
 
 <p><strong><a href="davila_goldstein_optimal_di.pdf" target="_blank">Optimal Deposit Insurance</a></strong>, with Itay Goldstein. <em>Journal of Political Economy</em>, May 2022. Forthcoming. <strong><a href="bibtex/davila_goldstein_optimal_deposit_insurance.txt" target="_blank">BibTeX</a></strong>.</p>
 
-<p><strong><a href="davila_parlatore_volatility.pdf" target="_blank">Volatility and Informativeness</a></strong>, with Cecilia Parlatore. <em>Journal of Financial Economics</em>, August 2022. Forthcoming. <strong><a href="bibtex/davila_parlatore_volatility.txt" target="_blank">BibTeX</a></strong>.</p>
+<p><strong><a href="davila_parlatore_volatility.pdf" target="_blank">Volatility and Informativeness</a></strong>, with Cecilia Parlatore. <em>Journal of Financial Economics</em>, December 2022. Forthcoming. <strong><a href="bibtex/davila_parlatore_volatility.txt" target="_blank">BibTeX</a></strong>.</p>
 
 <h1 id="under-revision">Under Revision</h1>
 
@@ -389,7 +389,8 @@ StatCounter"></a></div></noscript>
 
 <h1 id="working-papers">Working Papers</h1>
 
-<p><strong><a href="davila_schaab_welfare_heterogeneous.pdf" target="_blank">Welfare Assessments with Heterogeneous Individuals</a></strong>, with Andreas Schaab, September 2022. <strong><a href="user_guide_DS_weights_analytics.pdf" target="_blank">User Guide</a></strong>. <strong><a href="https://github.com/schaab-lab/DS-weights" target="_blank">Github Repository</a></strong></p>
+<p><strong><a href="davila_schaab_welfare_heterogeneous.pdf" target="_blank">Welfare Assessments with Heterogeneous Individuals</a></strong>, with Andreas Schaab, September 2022.
+<strong><a href="user_guide_DS_weights_analytics.pdf" target="_blank">User Guide</a></strong>. <strong><a href="https://github.com/schaab-lab/DS-weights" target="_blank">Github Repository</a></strong></p>
 
 <p><strong><a href="davila_schaab_timeless_ramsey.pdf" target="_blank">Optimal Monetary Policy with Heterogeneous Agents: A Timeless Ramsey Approach</a></strong>, with Andreas Schaab, July 2022.</p>
 
