--- a/contact/index.html
+++ b/contact/index.html
@@ -358,7 +358,7 @@ StatCounter"></a></div></noscript>
   <div class="article-style" itemprop="articleBody"><p><strong>Address:</strong><br />
 Yale University<br />
 Department of Economics<br />
-451 College St. Room 210<br />
+28 Hillhouse Ave. Room A206<br />
 New Haven, CT<br />
 06520-8268<br />
 Email: eduardo.davila@yale.edu<br />
