--- a/discussions/index.html
+++ b/discussions/index.html
@@ -355,40 +355,44 @@ StatCounter"></a></div></noscript>
 
 <div class="universal-wrapper">
   
-  <div class="article-style" itemprop="articleBody"><p><strong>Socially Responsible Divestment, <a href="davila_discussion_els.pdf" target="_blank">SLIDES</a></strong><br />
-by by Alex Edmans, Doron Levit, and Jan Schneemeier
+  <div class="article-style" itemprop="articleBody"><p><strong>Green Capital Requirements, <a href="davila_discussion_oehmke_opp.pdf" target="_blank">SLIDES</a></strong><br />
+by Martin Oehmke and Marcus Opp<br />
+AFA Meetings, 2023</p>
+
+<p><strong>Socially Responsible Divestment, <a href="davila_discussion_els.pdf" target="_blank">SLIDES</a></strong><br />
+by Alex Edmans, Doron Levit, and Jan Schneemeier<br />
 NBER Corporate Finance Fall Meeting, 2022</p>
 
 <p><strong>Bank Runs, Fragility, and Credit Easing, <a href="davila_discussion_amador_bianchi.pdf" target="_blank">SLIDES</a></strong><br />
-by Manuel Amador and Javier Bianchi
+by Manuel Amador and Javier Bianchi<br />
 Bank of Canada Workshop on Monetary Policy Research, 2022</p>
 
 <p><strong>(In)efficiency in Information Acquisition and Aggregation through Prices, <a href="davila_discussion_psv.pdf" target="_blank">SLIDES</a></strong><br />
-by Alessandro Pavan, Savitar Sundaresan, and Xavier Vives
+by Alessandro Pavan, Savitar Sundaresan, and Xavier Vives<br />
 Econometric Society Meetings, 2022</p>
 
 <p><strong>The Political Economy of Prudential Regulation, <a href="davila_discussion_rola_janicka.pdf" target="_blank">SLIDES</a></strong><br />
-by Magdalena Rola-Janicka
+by Magdalena Rola-Janicka<br />
 FIN-FIRE-Workshop, 2021</p>
 
 <p><strong>Delayed Crises and Slow Recoveries, <a href="davila_discussion_liu_wang_yang.pdf" target="_blank">SLIDES</a></strong><br />
-by Xuewen Liu, Pengfei Wang, and Zhongchao Yang
+by Xuewen Liu, Pengfei Wang, and Zhongchao Yang<br />
 China International Conference in Finance, 2021</p>
 
 <p><strong>Is There Too Much Benchmarking in Asset Management?, <a href="davila_discussion_kklp.pdf" target="_blank">SLIDES</a></strong><br />
-by Anil Kashyap, Natalia Kovrijnykh, Jian Li, and Anna Pavlova
+by Anil Kashyap, Natalia Kovrijnykh, Jian Li, and Anna Pavlova<br />
 JHU Carey Finance Conference, 2021</p>
 
 <p><strong>Renegotiation in Debt Chains, <a href="davila_discussion_glode_opp.pdf" target="_blank">SLIDES</a></strong><br />
-by Vincent Glode and Christian Opp
+by Vincent Glode and Christian Opp<br />
 SFS Cavalcade, 2021</p>
 
 <p><strong>Can the Cure Kill the Patient? Corporate Credit Interventions and Debt Overhang, <a href="davila_discussion_crouzet_tourre.pdf" target="_blank">SLIDES</a></strong><br />
-by Nicolas Crouzet and Fabrice Tourre
+by Nicolas Crouzet and Fabrice Tourre<br />
 Adam Smith Workshop, 2021</p>
 
 <p><strong>Alpha and Beta Information, <a href="davila_discussion_hssy.pdf" target="_blank">SLIDES</a></strong><br />
-by Shiyang Huang, Jan Schneemeier, Avanidhar Subrahmanyam, and Liyan Yang
+by Shiyang Huang, Jan Schneemeier, Avanidhar Subrahmanyam, and Liyan Yang<br />
 MFA Meetings, 2021</p>
 
 <p><strong>Dissecting Mechanisms of Financial Crises: Intermediation and Sentiment, <a href="davila_discussion_kl.pdf" target="_blank">SLIDES</a></strong><br />
