--- a/research/index.html
+++ b/research/index.html
@@ -369,7 +369,7 @@ StatCounter"></a></div></noscript>
 
 <p><strong><a href="davila_parlatore_trading_costs.pdf" target="_blank">Trading Costs and Informational Efficiency</a></strong>, with Cecilia Parlatore. <em>The Journal of Finance</em>, Volume 76, Issue 3, June 2021, Pages 1471-1539. <strong><a href="https://onlinelibrary.wiley.com/doi/abs/10.1111/jofi.13008" target="_blank">Link</a></strong>, <strong><a href="bibtex/davila_parlatore_trading_costs.txt" target="_blank">BibTeX</a></strong>.</p>
 
-<p><strong><a href="davila_optimal_ftt.pdf" target="_blank">Optimal Financial Transaction Taxes</a></strong>. <em>The Journal of Finance</em>, November 2021. Forthcoming. <strong><a href="https://onlinelibrary.wiley.com/doi/10.1111/jofi.13188" target="_blank">Link</a></strong>, <strong><a href="bibtex/davila_optimal_ftt.txt" target="_blank">BibTeX</a></strong>.</p>
+<p><strong><a href="davila_optimal_ftt.pdf" target="_blank">Optimal Financial Transaction Taxes</a></strong>. <em>The Journal of Finance</em>, Volume 78, Issue 1, February 2023, Pages 5-61. <strong><a href="https://onlinelibrary.wiley.com/doi/10.1111/jofi.13188" target="_blank">Link</a></strong>, <strong><a href="bibtex/davila_optimal_ftt.txt" target="_blank">BibTeX</a></strong>.</p>
 
 <p><strong><a href="davila_hebert_corporate_taxation.pdf" target="_blank">Optimal Corporate Taxation under Financial Frictions</a></strong>, with Benjamin Hébert. <em>The Review of Economic Studies</em>, July 2022. Forthcoming. <strong><a href="https://doi.org/10.1093/restud/rdac068" target="_blank">Link</a></strong>, <strong><a href="bibtex/davila_hebert_optimal_corporate_taxation.txt" target="_blank">BibTeX</a></strong>.</p>
 
@@ -379,18 +379,18 @@ StatCounter"></a></div></noscript>
 
 <h1 id="under-revision">Under Revision</h1>
 
-<p><strong><a href="davila_walther_prudential_beliefs.pdf" target="_blank">Prudential Policy with Distorted Beliefs</a></strong>, with Ansgar Walther, June 2022.</p>
-
 <p><strong><a href="davila_parlatore_identifying.pdf" target="_blank">Identifying Price Informativeness</a></strong>, with Cecilia Parlatore, April 2022. Code and data are available <strong><a href="https://github.com/edavila/identifying_price_informativeness" target="_blank">here</a></strong>.</p>
 
 <p><strong><a href="davila_walther_corrective.pdf" target="_blank">Corrective Regulation with Imperfect Instruments</a></strong>, with Ansgar Walther, May 2022.</p>
 
 <p><strong><a href="davila_graves_parlatore_value_arbitrage.pdf" target="_blank">The Value of Arbitrage</a></strong>, with Daniel Graves and Cecilia Parlatore, August 2022.</p>
 
-<h1 id="working-papers">Working Papers</h1>
+<p><strong><a href="davila_walther_prudential_beliefs.pdf" target="_blank">Prudential Policy with Distorted Beliefs</a></strong>, with Ansgar Walther, June 2022.</p>
 
 <p><strong><a href="davila_schaab_welfare_heterogeneous.pdf" target="_blank">Welfare Assessments with Heterogeneous Individuals</a></strong>, with Andreas Schaab, September 2022.
 <strong><a href="user_guide_DS_weights_analytics.pdf" target="_blank">User Guide</a></strong>. <strong><a href="https://github.com/schaab-lab/DS-weights" target="_blank">Github Repository</a></strong></p>
+
+<h1 id="working-papers">Working Papers</h1>
 
 <p><strong><a href="davila_schaab_timeless_ramsey.pdf" target="_blank">Optimal Monetary Policy with Heterogeneous Agents: A Timeless Ramsey Approach</a></strong>, with Andreas Schaab, July 2022.</p>
 
