--- a/research/index.html
+++ b/research/index.html
@@ -371,11 +371,11 @@ StatCounter"></a></div></noscript>
 
 <p><strong><a href="davila_optimal_ftt.pdf" target="_blank">Optimal Financial Transaction Taxes</a></strong>. <em>The Journal of Finance</em>, Volume 78, Issue 1, February 2023, Pages 5-61. <strong><a href="https://onlinelibrary.wiley.com/doi/10.1111/jofi.13188" target="_blank">Link</a></strong>, <strong><a href="bibtex/davila_optimal_ftt.txt" target="_blank">BibTeX</a></strong>.</p>
 
+<p><strong><a href="davila_parlatore_volatility.pdf" target="_blank">Volatility and Informativeness</a></strong>, with Cecilia Parlatore. <em>Journal of Financial Economics</em>, Volume 147, Issue 3, March 2023, Pages 550–572. <strong><a href="https://doi.org/10.1016/j.jfineco.2022.12.005" target="_blank">Link</a></strong>, <strong><a href="bibtex/davila_parlatore_volatility.txt" target="_blank">BibTeX</a></strong>.</p>
+
 <p><strong><a href="davila_hebert_corporate_taxation.pdf" target="_blank">Optimal Corporate Taxation under Financial Frictions</a></strong>, with Benjamin Hébert. <em>The Review of Economic Studies</em>, July 2022. Forthcoming. <strong><a href="https://doi.org/10.1093/restud/rdac068" target="_blank">Link</a></strong>, <strong><a href="bibtex/davila_hebert_optimal_corporate_taxation.txt" target="_blank">BibTeX</a></strong>.</p>
 
 <p><strong><a href="davila_goldstein_optimal_di.pdf" target="_blank">Optimal Deposit Insurance</a></strong>, with Itay Goldstein. <em>Journal of Political Economy</em>, May 2022. Forthcoming. <strong><a href="bibtex/davila_goldstein_optimal_deposit_insurance.txt" target="_blank">BibTeX</a></strong>.</p>
-
-<p><strong><a href="davila_parlatore_volatility.pdf" target="_blank">Volatility and Informativeness</a></strong>, with Cecilia Parlatore. <em>Journal of Financial Economics</em>, December 2022. Forthcoming. <strong><a href="bibtex/davila_parlatore_volatility.txt" target="_blank">BibTeX</a></strong>.</p>
 
 <h1 id="under-revision">Under Revision</h1>
 
@@ -385,14 +385,14 @@ StatCounter"></a></div></noscript>
 
 <p><strong><a href="davila_graves_parlatore_value_arbitrage.pdf" target="_blank">The Value of Arbitrage</a></strong>, with Daniel Graves and Cecilia Parlatore, August 2022.</p>
 
-<p><strong><a href="davila_walther_prudential_beliefs.pdf" target="_blank">Prudential Policy with Distorted Beliefs</a></strong>, with Ansgar Walther, June 2022.</p>
-
 <p><strong><a href="davila_schaab_welfare_heterogeneous.pdf" target="_blank">Welfare Assessments with Heterogeneous Individuals</a></strong>, with Andreas Schaab, September 2022.
 <strong><a href="user_guide_DS_weights_analytics.pdf" target="_blank">User Guide</a></strong>. <strong><a href="https://github.com/schaab-lab/DS-weights" target="_blank">Github Repository</a></strong></p>
 
+<p><strong><a href="davila_walther_prudential_beliefs.pdf" target="_blank">Prudential Policy with Distorted Beliefs</a></strong>, with Ansgar Walther, January 2023.</p>
+
 <h1 id="working-papers">Working Papers</h1>
 
-<p><strong><a href="davila_schaab_timeless_ramsey.pdf" target="_blank">Optimal Monetary Policy with Heterogeneous Agents: A Timeless Ramsey Approach</a></strong>, with Andreas Schaab, July 2022.</p>
+<p><strong><a href="davila_schaab_optimal_mp_hank.pdf" target="_blank">Optimal Monetary Policy with Heterogeneous Agents: A Timeless Ramsey Approach</a></strong>, with Andreas Schaab, January 2023.</p>
 
 <p><strong>​<a href="davila_philippon_inc_shocks.pdf" target="_blank">Incompleteness Shocks</a></strong>, with Thomas Philippon, December 2017. <em>(substantially revised draft coming soon)</em></p>
 
