--- a/research/index.html
+++ b/research/index.html
@@ -377,6 +377,8 @@ StatCounter"></a></div></noscript>
 
 <p><strong><a href="davila_goldstein_optimal_di.pdf" target="_blank">Optimal Deposit Insurance</a></strong>, with Itay Goldstein. <em>Journal of Political Economy</em>, May 2022. Forthcoming. <strong><a href="bibtex/davila_goldstein_optimal_deposit_insurance.txt" target="_blank">BibTeX</a></strong>.</p>
 
+<p><strong><a href="davila_walther_prudential_beliefs.pdf" target="_blank">Prudential Policy with Distorted Beliefs</a></strong>, with Ansgar Walther. <em>American Economic Review</em>, February 2022. Conditionally Accepted. <strong><a href="bibtex/davila_walther_prudential_beliefs.txt" target="_blank">BibTeX</a></strong>.</p>
+
 <h1 id="under-revision">Under Revision</h1>
 
 <p><strong><a href="davila_parlatore_identifying.pdf" target="_blank">Identifying Price Informativeness</a></strong>, with Cecilia Parlatore, April 2022. Code and data are available <strong><a href="https://github.com/edavila/identifying_price_informativeness" target="_blank">here</a></strong>.</p>
@@ -388,11 +390,13 @@ StatCounter"></a></div></noscript>
 <p><strong><a href="davila_schaab_welfare_heterogeneous.pdf" target="_blank">Welfare Assessments with Heterogeneous Individuals</a></strong>, with Andreas Schaab, September 2022.
 <strong><a href="user_guide_DS_weights_analytics.pdf" target="_blank">User Guide</a></strong>. <strong><a href="https://github.com/schaab-lab/DS-weights" target="_blank">Github Repository</a></strong></p>
 
-<p><strong><a href="davila_walther_prudential_beliefs.pdf" target="_blank">Prudential Policy with Distorted Beliefs</a></strong>, with Ansgar Walther, January 2023.</p>
-
 <h1 id="working-papers">Working Papers</h1>
 
 <p><strong><a href="davila_schaab_optimal_mp_hank.pdf" target="_blank">Optimal Monetary Policy with Heterogeneous Agents: Discretion, Commitment, and Timeless Policy</a></strong>, with Andreas Schaab, February 2023.</p>
+
+<p><strong><a href="davila_schaab_central_bank_mandates.pdf" target="_blank">Central Bank Mandates with Distributional Considerations</a></strong>, with Andreas Schaab, March 2023.</p>
+
+<p><strong><a href="davila_schaab_welfare_accounting.pdf" target="_blank">Welfare Accounting</a></strong>, with Andreas Schaab, March 2023.</p>
 
 <p><strong>​<a href="davila_philippon_inc_shocks.pdf" target="_blank">Incompleteness Shocks</a></strong>, with Thomas Philippon, December 2017. <em>(substantially revised draft coming soon)</em></p>
 
