--- a/discussions/index.html
+++ b/discussions/index.html
@@ -355,7 +355,11 @@ StatCounter"></a></div></noscript>
 
 <div class="universal-wrapper">
   
-  <div class="article-style" itemprop="articleBody"><p><strong>Green Capital Requirements, <a href="davila_discussion_oehmke_opp.pdf" target="_blank">SLIDES</a></strong><br />
+  <div class="article-style" itemprop="articleBody"><p><strong>Stablecoin Runs and the Centralization of Arbitrage, <a href="davila_discussion_mzz.pdf" target="_blank">SLIDES</a></strong><br />
+by Yiming Ma, Yao Zeng, and Anthony Lee Zhang
+OFR Rising Scholars Conference, 2023</p>
+
+<p><strong>Green Capital Requirements, <a href="davila_discussion_oehmke_opp.pdf" target="_blank">SLIDES</a></strong><br />
 by Martin Oehmke and Marcus Opp<br />
 AFA Meetings, 2023</p>
 
