--- a/discussions/index.html
+++ b/discussions/index.html
@@ -356,7 +356,7 @@ StatCounter"></a></div></noscript>
 <div class="universal-wrapper">
   
   <div class="article-style" itemprop="articleBody"><p><strong>Stablecoin Runs and the Centralization of Arbitrage, <a href="davila_discussion_mzz.pdf" target="_blank">SLIDES</a></strong><br />
-by Yiming Ma, Yao Zeng, and Anthony Lee Zhang
+by Yiming Ma, Yao Zeng, and Anthony Lee Zhang<br />
 OFR Rising Scholars Conference, 2023</p>
 
 <p><strong>Green Capital Requirements, <a href="davila_discussion_oehmke_opp.pdf" target="_blank">SLIDES</a></strong><br />
