--- a/discussions/index.html
+++ b/discussions/index.html
@@ -355,7 +355,15 @@ StatCounter"></a></div></noscript>
 
 <div class="universal-wrapper">
   
-  <div class="article-style" itemprop="articleBody"><p><strong>Stablecoin Runs and the Centralization of Arbitrage, <a href="davila_discussion_mzz.pdf" target="_blank">SLIDES</a></strong><br />
+  <div class="article-style" itemprop="articleBody"><p><strong>Falling Interest Rates and Credit Reallocation: Lessons from General Equilibrium, <a href="davila_discussion_almvv.pdf" target="_blank">SLIDES</a></strong><br />
+by Vladimir Asriyan, Luc Laeven, Alberto Martin, Alejandro Van der Ghote, and Victoria Vanasco
+Third Conference on Non-Bank Financial Sector and Financial Stability, 2023</p>
+
+<p><strong>Valuing Financial Data, <a href="davila_discussion_fsvv.pdf" target="_blank">SLIDES</a></strong><br />
+by Maryam Farboodi, Dhruv Singal, Laura Veldkamp, and Venky Venkataswaran<br />
+SFS Cavalcade, 2023</p>
+
+<p><strong>Stablecoin Runs and the Centralization of Arbitrage, <a href="davila_discussion_mzz.pdf" target="_blank">SLIDES</a></strong><br />
 by Yiming Ma, Yao Zeng, and Anthony Lee Zhang<br />
 OFR Rising Scholars Conference, 2023</p>
 
