--- a/discussions.html
+++ b/discussions.html
@@ -40,7 +40,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ms-auto">
                   <li class="nav-item">
-                      <a class="nav-link" href="cv/bio.html">Bio/CV</a>
+                      <a class="nav-link" href="bio.html">Bio/CV</a>
                   </li>
                   <li class="nav-item">
                       <a class="nav-link" href="research.html">Research</a>
