--- a/discussions.html
+++ b/discussions.html
@@ -68,10 +68,15 @@
 
     <h4> 2023 </h4>
 
+    <p><strong>The Macroeconomics of Trade Credit, <a
+          href="discussions/davila_discussion_bocola_bornstein.pdf" target="_blank">SLIDES</a></strong><br />
+      by Luigi Bocola and Gideon Bornstein <br />
+      4th TWID International Finance Conference, 2023</p>
+    
     <p><strong>Redistributive Inflation and Optimal Monetary Policy, <a
-          href="discussions/davila_discussion_yang.pdf" target="_blank">SLIDES</a></strong><br />
-      by Yucheng Yang <br />
-      China International Conference in Finance (CICF), 2023</p>
+        href="discussions/davila_discussion_yang.pdf" target="_blank">SLIDES</a></strong><br />
+    by Yucheng Yang <br />
+    China International Conference in Finance (CICF), 2023</p>
 
     <p><strong>Falling Interest Rates and Credit Reallocation: Lessons from General Equilibrium, <a
           href="discussions/davila_discussion_almvv.pdf" target="_blank">SLIDES</a></strong><br />
