--- a/research.html
+++ b/research.html
@@ -66,6 +66,13 @@
   <div class="container mt-5">
     <h2>Publications</h2>
 
+    <p><strong><a href="/research/davila_graves_parlatore_value_arbitrage.pdf" target="_blank">The Value of
+      Arbitrage</a></strong>, with Daniel Graves and Cecilia Parlatore.
+      <br />
+      <em>Journal of Political Economy</em>, Forthcoming, 2023.
+          <strong><a href="/research/bibtex/davila_graves_parlatore_arbitrage.txt" target="_blank">BibTeX</a></strong>.
+    </p>
+
     <p><strong><a href="/research/davila_hebert_corporate_taxation.pdf" target="_blank">Optimal Corporate Taxation under
           Financial Frictions</a></strong>, with Benjamin Hébert.
       <br />
@@ -170,15 +177,11 @@
           Externalities</a>&rdquo;. <sub>
     </p>
 
-
     <h2 id="under-revision">Under Revision</h2>
 
-    <p><strong><a href="/research/davila_graves_parlatore_value_arbitrage.pdf" target="_blank">The Value of
-          Arbitrage</a></strong>, with Daniel Graves and Cecilia Parlatore, June 2023.</p>
-
     <p><strong><a href="/research/davila_parlatore_identifying.pdf" target="_blank">Identifying Price
-          Informativeness</a></strong>, with Cecilia Parlatore, May 2023. Code and data are available <strong><a
-          href="https://github.com/edavila/identifying_price_informativeness" target="_blank">here</a></strong>.</p>
+          Informativeness</a></strong>, with Cecilia Parlatore, May 2023. <!--Code and data are available <strong><a
+          href="https://github.com/edavila/identifying_price_informativeness" target="_blank">here</a></strong>. --> </p>
 
     <p><strong><a href="/research/davila_schaab_optimal_mp_hank.pdf" target="_blank">Optimal Monetary Policy with
           Heterogeneous Agents: Discretion, Commitment, and Timeless Policy</a></strong>, with Andreas Schaab, February
@@ -197,7 +200,7 @@
     <h2 id="working-papers">Working Papers</h2>
 
     <p><strong><a href="/research/davila_schaab_welfare_accounting.pdf" target="_blank">Welfare Accounting</a></strong>,
-      with Andreas Schaab, March 2023.</p>
+      with Andreas Schaab, September 2023.</p>
 
     <p><strong><a href="/research/davila_schaab_central_bank_mandates.pdf" target="_blank">Central Bank Mandates with
           Distributional Considerations</a></strong>, with Andreas Schaab, March 2023.</p>
@@ -208,7 +211,6 @@
     <p><strong><a href="/research/davila_weymuller_optimal_joint_bond.pdf" target="_blank">Optimal Joint Bond
           Design</a></strong>, with Charles-Henri Weymuller, September 2017. <em>(substantially revised draft coming
         soon)</em></p>
-
 
 
     <h2 id="inactive-working-papers">Inactive Working Papers</h2>
