--- a/discussions.html
+++ b/discussions.html
@@ -67,6 +67,15 @@
     <h2 id="discussions">Discussions</h2>
 
     <h4> 2023 </h4>
+    <p><strong>Whatever It Takes? Market Maker of Last Resort and its Fragility, <a
+      href="discussions/davila_discussion_choi_yorulmazer.pdf" target="_blank">SLIDES</a></strong><br />
+      by Dong Beom Choi and Tanju Yorulmazer <br />
+      Douglas Gale Festschrift, 2023</p>
+    
+    <p><strong>Bailing out (Firms') Uninsured Deposits: A Quantitative Analysis, <a
+      href="discussions/davila_discussion_pancost_robatto.pdf" target="_blank">SLIDES</a></strong><br />
+  by Aaron Pancost and Roberto Robatto <br />
+  Wharton Conference on Liquidity and Financial Fragility, 2023</p>
 
     <p><strong>The Macroeconomics of Trade Credit, <a
           href="discussions/davila_discussion_bocola_bornstein.pdf" target="_blank">SLIDES</a></strong><br />
@@ -208,7 +217,7 @@
     <p><strong>How I Learned to Stop Worrying and Love Fire Sales, <a href="discussions/davila_discussion_kurlat.pdf"
           target="_blank">SLIDES</a></strong><br />
       by Pablo Kurlat<br />
-      Wharton Liquidity Conference, 2018</p>
+      Wharton Conference on Liquidity and Financial Fragility, 2018</p>
 
     <p><strong>Speed Acquisition, <a href="discussions/davila_discussion_cavalcade.pdf"
           target="_blank">SLIDES</a></strong><br />
@@ -259,7 +268,7 @@
     <p><strong>Coordinating Business Cycles, <a href="discussions/davila_discussion_st.pdf"
           target="_blank">SLIDES</a></strong><br />
       by Edouard Schaal and Mathieu Taschereau-Dumouchel<br />
-      Wharton Liquidity Conference, 2015</p>
+      Wharton Conference on Liquidity and Financial Fragility, 2015</p>
 
     <p><strong>Advertising Arbitrage, <a href="discussions/davila_discussion_kp.pdf"
           target="_blank">SLIDES</a></strong><br />
