--- a/discussions.html
+++ b/discussions.html
@@ -66,7 +66,15 @@
   <div class="container mt-5">
     <h2 id="discussions">Discussions</h2>
 
+    <h4> 2024 </h4>
+    
+    <p><strong>Exchange Controls As A Fiscal Instrument, <a
+      href="discussions/davila_discussion_sgu_exchange_rates.pdf" target="_blank">SLIDES</a></strong><br />
+    by Stephanie Schmitt-Grohé and Martín Uribe <br />
+    AEA Meetings, 2024</p>
+
     <h4> 2023 </h4>
+
     <p><strong>Whatever It Takes? Market Maker of Last Resort and its Fragility, <a
       href="discussions/davila_discussion_choi_yorulmazer.pdf" target="_blank">SLIDES</a></strong><br />
       by Dong Beom Choi and Tanju Yorulmazer <br />
@@ -74,8 +82,8 @@
     
     <p><strong>Bailing out (Firms') Uninsured Deposits: A Quantitative Analysis, <a
       href="discussions/davila_discussion_pancost_robatto.pdf" target="_blank">SLIDES</a></strong><br />
-  by Aaron Pancost and Roberto Robatto <br />
-  Wharton Conference on Liquidity and Financial Fragility, 2023</p>
+    by Aaron Pancost and Roberto Robatto <br />
+    Wharton Conference on Liquidity and Financial Fragility, 2023</p>
 
     <p><strong>The Macroeconomics of Trade Credit, <a
           href="discussions/davila_discussion_bocola_bornstein.pdf" target="_blank">SLIDES</a></strong><br />
@@ -254,7 +262,7 @@
       Yale Junior Finance Conference, 2016</p>
 
     <p><strong>Multiple Equilibria in Open Economy Models with Collateral Constraints: Overborrowing Revisited, <a
-          href="discussions/davila_discussion_dgu.pdf" target="_blank">SLIDES</a></strong><br />
+          href="discussions/davila_discussion_sgu.pdf" target="_blank">SLIDES</a></strong><br />
       by Stephanie Schmitt-Grohé and Martin Uribe<br />
       ​NBER International Finance Spring Meeting, 2016</p>
 
