--- a/research.html
+++ b/research.html
@@ -179,41 +179,35 @@
 
     <h2 id="under-revision">Under Revision</h2>
 
+    <p><strong><a href="/research/davila_walther_corrective.pdf" target="_blank">Corrective Regulation with Imperfect
+      Instruments</a></strong>, with Ansgar Walther, March 2024.</p>
+
     <p><strong><a href="/research/davila_parlatore_identifying.pdf" target="_blank">Identifying Price
           Informativeness</a></strong>, with Cecilia Parlatore, December 2023. <!--Code and data are available <strong><a
           href="https://github.com/edavila/identifying_price_informativeness" target="_blank">here</a></strong>. --> </p>
 
-    <p><strong><a href="/research/davila_schaab_optimal_mp_hank.pdf" target="_blank">Optimal Monetary Policy with
-          Heterogeneous Agents: Discretion, Commitment, and Timeless Policy</a></strong>, with Andreas Schaab, February
-      2023.</p>
-
     <p><strong><a href="/research/davila_schaab_welfare_heterogeneous.pdf" target="_blank">Welfare Assessments with
           Heterogeneous Individuals</a></strong>, with Andreas Schaab, December 2023.
-      <strong><a href="https://github.com/schaab-lab/DS-weights" target="_blank">Github Repository</a></strong>
-    </p>
+      <strong><a href="https://github.com/schaab-lab/DS-weights" target="_blank">Github Repository</a></strong></p>
 
-    <p><strong><a href="/research/davila_walther_corrective.pdf" target="_blank">Corrective Regulation with Imperfect
-          Instruments</a></strong>, with Ansgar Walther, May 2022.</p>
+    <p><strong><a href="/research/davila_schaab_optimal_mp_hank.pdf" target="_blank">Optimal Monetary Policy with
+      Heterogeneous Agents: Discretion, Commitment, and Timeless Policy</a></strong>, with Andreas Schaab, February 2023.</p>
 
     <h2 id="working-papers">Working Papers</h2>
+    
+    <p><strong><a href="/research/davila_fourakis_weymuller_optimal_joint_bond.pdf" target="_blank">Optimal Joint Bond
+      Design</a></strong>, with Stelios Fourakis and Charles-Henri Weymuller, April 2024. </p>
 
     <p><strong><a href="/research/davila_schaab_welfare_accounting.pdf" target="_blank">Welfare Accounting</a></strong>,
-      with Andreas Schaab, September 2023.</p>
-    
-    <p><strong>​<a href="/research/davila_philippon_inc_shocks.pdf" target="_blank">Incompleteness Shocks</a></strong>,
-        with Thomas Philippon, December 2017. <em>(substantially revised draft coming soon)</em></p>
+      with Andreas Schaab, February 2024.</p>
 
-    <p><strong><a href="/research/davila_schaab_central_bank_mandates.pdf" target="_blank">Central Bank Mandates with
-          Distributional Considerations</a></strong>, with Andreas Schaab, March 2023.</p>
-
-    <p><strong><a href="/research/davila_weymuller_optimal_joint_bond.pdf" target="_blank">Optimal Joint Bond
-          Design</a></strong>, with Charles-Henri Weymuller, September 2017. <em>(substantially revised draft coming
-        soon)</em></p>
+    <p><strong><a href="/research/davila_philippon_inc_shocks.pdf" target="_blank">Incompleteness Shocks</a></strong>,
+            with Thomas Philippon, December 2017. <em>(substantially revised draft coming soon)</em></p>
 
     <h2 id="inactive-working-papers">Inactive Working Papers</h2>
 
     <p><strong><a href="/research/davila_cumulant.pdf" target="_blank">Myopic Portfolio Choice with Higher
-          Cumulants​</a></strong></p>
+          Cumulants</a></strong></p>, January 2011
 
   </div>
 
