--- a/research.html
+++ b/research.html
@@ -207,7 +207,7 @@
     <h2 id="inactive-working-papers">Inactive Working Papers</h2>
 
     <p><strong><a href="/research/davila_cumulant.pdf" target="_blank">Myopic Portfolio Choice with Higher
-          Cumulants</a></strong></p>, January 2011
+          Cumulants</a></strong>, January 2011. </p>
 
   </div>
 
