--- a/research.html
+++ b/research.html
@@ -69,7 +69,8 @@
     <p><strong><a href="/research/davila_graves_parlatore_value_arbitrage.pdf" target="_blank">The Value of
       Arbitrage</a></strong>, with Daniel Graves and Cecilia Parlatore.
       <br />
-      <em>Journal of Political Economy</em>, Forthcoming, 2023.
+      <em>Journal of Political Economy</em>, Volume 114, Issue 6, June, 2024.
+          <strong><a href="https://www.journals.uchicago.edu/doi/10.1086/728453" target="_blank">Link</a></strong> |
           <strong><a href="/research/bibtex/davila_graves_parlatore_arbitrage.txt" target="_blank">BibTeX</a></strong>.
     </p>
 
@@ -180,7 +181,7 @@
     <h2 id="under-revision">Under Revision</h2>
 
     <p><strong><a href="/research/davila_walther_corrective.pdf" target="_blank">Corrective Regulation with Imperfect
-      Instruments</a></strong>, with Ansgar Walther, March 2024.</p>
+      Instruments</a></strong>, with Ansgar Walther, May 2022.</p>
 
     <p><strong><a href="/research/davila_parlatore_identifying.pdf" target="_blank">Identifying Price
           Informativeness</a></strong>, with Cecilia Parlatore, December 2023. <!--Code and data are available <strong><a
@@ -195,6 +196,9 @@
 
     <h2 id="working-papers">Working Papers</h2>
     
+    <p><strong><a href="/research/davila_schaab_non_envelope.pdf" target="_blank">A Non-Envelope Theorem with Linearly Homogeneous Constraints</a></strong>,
+      with Andreas Schaab, May 2024.</p>
+
     <p><strong><a href="/research/davila_fourakis_weymuller_optimal_joint_bond.pdf" target="_blank">Optimal Joint Bond
       Design</a></strong>, with Stelios Fourakis and Charles-Henri Weymuller, April 2024. </p>
 
