--- a/index.html
+++ b/index.html
@@ -95,19 +95,22 @@
 
         <ul class="list-style-type:circle">
           <li> 
+            <strong><a href="/research/davila_walther_corrective.pdf" target="_blank">Corrective Regulation with Imperfect Instruments</a></strong>, with Ansgar Walther, July 2024.
+          </li>
+          <li> 
+            <strong><a href="/research/davila_schaab_non_envelope.pdf" target="_blank">A Non-Envelope Theorem with Linearly Homogeneous Constraints</a></strong>, with Andreas Schaab, May 2024.
+          </li>
+          <li> 
+            <strong><a href="/research/davila_schaab_welfare_accounting.pdf" target="_blank">Welfare Accounting</a></strong>, with Andreas Schaab, February 2024.
+          </li>
+          <li> 
             <strong><a href="/research/davila_schaab_welfare_heterogeneous.pdf" target="_blank">Welfare Assessments with Heterogeneous Individuals</a></strong>, with Andreas Schaab, December 2023.
           </li>
           <li> 
             <strong><a href="/research/davila_parlatore_identifying.pdf" target="_blank">Identifying Price Informativeness</a></strong>, with Cecilia Parlatore, December 2023.
           </li>
           <li> 
-            <strong><a href="/research/davila_schaab_welfare_accounting.pdf" target="_blank">Welfare Accounting</a></strong>, with Andreas Schaab, September 2023.
-          </li>
-          <li> 
             <strong><a href="/research/davila_schaab_optimal_mp_hank.pdf" target="_blank">Optimal Monetary Policy with Heterogeneous Agents: Discretion, Commitment, and Timeless Policy</a></strong>, with Andreas Schaab, February 2023.
-          </li>
-          <li> 
-            <strong><a href="/research/davila_walther_corrective.pdf" target="_blank">Corrective Regulation with Imperfect Instruments</a></strong>, with Ansgar Walther, May 2022.
           </li>
         </ul>
       </p>
