--- a/research.html
+++ b/research.html
@@ -69,7 +69,7 @@
     <p><strong><a href="/research/davila_graves_parlatore_value_arbitrage.pdf" target="_blank">The Value of
       Arbitrage</a></strong>, with Daniel Graves and Cecilia Parlatore.
       <br />
-      <em>Journal of Political Economy</em>, Volume 114, Issue 6, June, 2024.
+      <em>Journal of Political Economy</em>, Volume 114, Issue 6, June, 2024, Pages 1947-1993.
           <strong><a href="https://www.journals.uchicago.edu/doi/10.1086/728453" target="_blank">Link</a></strong> |
           <strong><a href="/research/bibtex/davila_graves_parlatore_arbitrage.txt" target="_blank">BibTeX</a></strong>.
     </p>
@@ -181,7 +181,7 @@
     <h2 id="under-revision">Under Revision</h2>
 
     <p><strong><a href="/research/davila_walther_corrective.pdf" target="_blank">Corrective Regulation with Imperfect
-      Instruments</a></strong>, with Ansgar Walther, May 2022.</p>
+      Instruments</a></strong>, with Ansgar Walther, July 2024.</p>
 
     <p><strong><a href="/research/davila_parlatore_identifying.pdf" target="_blank">Identifying Price
           Informativeness</a></strong>, with Cecilia Parlatore, December 2023. <!--Code and data are available <strong><a
@@ -195,18 +195,21 @@
       Heterogeneous Agents: Discretion, Commitment, and Timeless Policy</a></strong>, with Andreas Schaab, February 2023.</p>
 
     <h2 id="working-papers">Working Papers</h2>
-    
+
+    <p><strong><a href="/research/davila_schaab_intergenerational_welfare_assessments.pdf" target="_blank">Intergenerational Welfare Assessments</a></strong>,
+      with Sergi Barcons and Andreas Schaab, July 2024.</p>
+
     <p><strong><a href="/research/davila_schaab_non_envelope.pdf" target="_blank">A Non-Envelope Theorem with Linearly Homogeneous Constraints</a></strong>,
       with Andreas Schaab, May 2024.</p>
 
-    <p><strong><a href="/research/davila_fourakis_weymuller_optimal_joint_bond.pdf" target="_blank">Optimal Joint Bond
-      Design</a></strong>, with Stelios Fourakis and Charles-Henri Weymuller, April 2024. </p>
-
     <p><strong><a href="/research/davila_schaab_welfare_accounting.pdf" target="_blank">Welfare Accounting</a></strong>,
-      with Andreas Schaab, February 2024.</p>
+        with Andreas Schaab, February 2024.</p>
+
+    <p><strong><a href="/research/davila_fourakis_weymuller_optimal_joint_bond.pdf" target="_blank">Optimal Joint Bond
+      Design</a></strong>, with Stelios Fourakis and Charles-Henri Weymuller, April 2024 (substantially revised draft coming soon).</p>
 
     <p><strong><a href="/research/davila_philippon_inc_shocks.pdf" target="_blank">Incompleteness Shocks</a></strong>,
-            with Thomas Philippon, December 2017. <em>(substantially revised draft coming soon)</em></p>
+            with Thomas Philippon, December 2017 (substantially revised draft coming soon).</p>
 
     <h2 id="inactive-working-papers">Inactive Working Papers</h2>
 
