--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@
 
         <ul class="list-style-type:circle">
           <li> 
+            <strong><a href="/research/davila_schaab_welfare_accounting.pdf" target="_blank">Welfare Accounting</a></strong>, with Andreas Schaab, October 2024.
+          </li>
+          <li> 
             <strong><a href="/research/davila_schaab_welfare_heterogeneous.pdf" target="_blank">Welfare Assessments with Heterogeneous Individuals</a></strong>, with Andreas Schaab, September 2024.
           </li>
           <li> 
@@ -109,9 +112,7 @@
           <li> 
             <strong><a href="/research/davila_schaab_non_envelope_theorem.pdf" target="_blank">A Non-Envelope Theorem with Linearly Homogeneous Constraints</a></strong>, with Andreas Schaab, August 2024.
           </li>
-          <li> 
-            <strong><a href="/research/davila_schaab_welfare_accounting.pdf" target="_blank">Welfare Accounting</a></strong>, with Andreas Schaab, February 2024.
-          </li>
+
           <li> 
             <strong><a href="/research/davila_schaab_optimal_mp_hank.pdf" target="_blank">Optimal Monetary Policy with Heterogeneous Agents: Discretion, Commitment, and Timeless Policy</a></strong>, with Andreas Schaab, February 2023.
           </li>
@@ -126,6 +127,7 @@
 
       <p> <br></p>
       <h5>Recent News</h5>
+      <h6><a href="https://economics.yale.edu/news/241002/yale-economist-eduardo-davila-wins-banco-sabadell-foundation-award-economic-research"> Yale Economist Eduardo Dávila Wins Banco Sabadell Foundation Award for Economic Research</a></h6>      
       <h6><a href="https://cowles.yale.edu/news/240509/cowles-foundation-hosts-18th-annual-conference-general-equilibrium"> Cowles Hosts 18th Annual Conference on General Equilibrium</a></h6>      
       <h6><a href="https://economics.yale.edu/news/240506/yale-hosts-deposit-insurance-conference-offering-new-perspectives-research-and-policy"> Yale Hosts Deposit Insurance Conference</a></h6>
       <h6><a href="https://economics.yale.edu/news/240221/eduardo-davila-and-ryota-iijima-named-sloan-fellows-early-career-excellence"> Sloan Fellowship Announcement</a></h6>
