--- a/discussions.html
+++ b/discussions.html
@@ -68,19 +68,19 @@
 
     <h4> 2024 </h4>
     
-    <p><strong>Exchange Controls As A Fiscal Instrument, <a
+    <p><strong>Exchange Controls as a Fiscal Instrument, <a
       href="discussions/davila_discussion_sgu_exchange_rates.pdf" target="_blank">SLIDES</a></strong><br />
     by Stephanie Schmitt-Grohé and Martín Uribe <br />
     AEA Meetings, 2024</p>
 
     <h4> 2023 </h4>
 
-    <p><strong>Whatever It Takes? Market Maker of Last Resort and its Fragility, <a
+    <p><strong>Whatever It Takes? Market Maker of Last Resort and Its Fragility, <a
       href="discussions/davila_discussion_choi_yorulmazer.pdf" target="_blank">SLIDES</a></strong><br />
       by Dong Beom Choi and Tanju Yorulmazer <br />
       Douglas Gale Festschrift, 2023</p>
     
-    <p><strong>Bailing out (Firms') Uninsured Deposits: A Quantitative Analysis, <a
+    <p><strong>Bailing Out (Firms') Uninsured Deposits: A Quantitative Analysis, <a
       href="discussions/davila_discussion_pancost_robatto.pdf" target="_blank">SLIDES</a></strong><br />
     by Aaron Pancost and Roberto Robatto <br />
     Wharton Conference on Liquidity and Financial Fragility, 2023</p>
