--- a/research.html
+++ b/research.html
@@ -66,8 +66,16 @@
   <div class="container mt-5">
     <h2>Publications</h2>
 
+    <p><strong><a href="/research/davila_parlatore_identifying.pdf" target="_blank">Identifying Price
+      Informativeness</a></strong>, with <a href="https://www.ceciliaparlatore.com/">Cecilia Parlatore</a>.
+      <br />
+      <em>Review of Financial Studies</em>, Conditionally Accepted, October 2024.
+          <!-- <strong><a href="https://www.journals.uchicago.edu/doi/10.1086/728453" target="_blank">Link</a></strong> | -->
+          <strong><a href="/research/bibtex/davila_parlatore_identifying.txt" target="_blank">BibTeX</a></strong>.
+    </p>
+
     <p><strong><a href="/research/davila_graves_parlatore_value_arbitrage.pdf" target="_blank">The Value of
-      Arbitrage</a></strong>, with Daniel Graves and Cecilia Parlatore.
+      Arbitrage</a></strong>, with <a href="https://sites.google.com/view/daniel-graves/">Daniel Graves</a> and <a href="https://www.ceciliaparlatore.com/">Cecilia Parlatore</a>.
       <br />
       <em>Journal of Political Economy</em>, Volume 114, Issue 6, June, 2024, Pages 1947-1993.
           <strong><a href="https://www.journals.uchicago.edu/doi/10.1086/728453" target="_blank">Link</a></strong> |
@@ -75,7 +83,7 @@
     </p>
 
     <p><strong><a href="/research/davila_hebert_corporate_taxation.pdf" target="_blank">Optimal Corporate Taxation under
-          Financial Frictions</a></strong>, with Benjamin Hébert.
+          Financial Frictions</a></strong>, with <a href="https://gsb-faculty.stanford.edu/benjamin-hebert/">Benjamin Hébert</a>.
       <br />
       <em>The Review of Economic Studies</em>, Volume 90, Issue 4, July 2023, Pages 1893–1933.
       <!-- <br /> -->
@@ -85,7 +93,7 @@
     </p>
 
     <p><strong><a href="/research/davila_walther_prudential_beliefs.pdf" target="_blank">Prudential Policy with
-          Distorted Beliefs</a></strong>, with Ansgar Walther.
+          Distorted Beliefs</a></strong>, with <a href="https://ansgarwalther.weebly.com/">Ansgar Walther</a>.
       <br />
       <em>American Economic Review</em>, Volume 113, Issue 7, July 2023, Pages 1967-2006.
       <!-- <br /> -->
@@ -95,7 +103,7 @@
     </p>
 
     <p><strong><a href="/research/davila_goldstein_optimal_di.pdf" target="_blank">Optimal Deposit
-          Insurance</a></strong>, with Itay Goldstein.
+          Insurance</a></strong>, with <a href="https://finance.wharton.upenn.edu/~itayg/">Itay Goldstein</a>.
       <br />
       <em>Journal of Political Economy</em>, Volume 131, Number 7, July 2023, Pages 1676-1730.
       <!-- <br /> -->
@@ -105,7 +113,7 @@
     </p>
 
     <p><strong><a href="/research/davila_parlatore_volatility.pdf" target="_blank">Volatility and
-          Informativeness</a></strong>, with Cecilia Parlatore.
+          Informativeness</a></strong>, with <a href="https://www.ceciliaparlatore.com/">Cecilia Parlatore</a>.
       <br />
       <em>Journal of Financial Economics</em>, Volume 147, Issue 3, March 2023, Pages 550–572.
       <!-- <br /> -->
@@ -125,7 +133,7 @@
     </p>
 
     <p><strong><a href="/research/davila_parlatore_trading_costs.pdf" target="_blank">Trading Costs and Informational
-          Efficiency</a></strong>, with Cecilia Parlatore.
+          Efficiency</a></strong>, with <a href="https://www.ceciliaparlatore.com/">Cecilia Parlatore</a>.
       <br />
       <em>The Journal of Finance</em>, Volume 76, Issue 3, June 2021, Pages 1471-1539.
       <!-- <br /> -->
@@ -135,7 +143,7 @@
     </p>
 
     <p><strong><a href="/research/davila_walther_bailouts.pdf" target="_blank">Does Size Matter? Bailouts with Large and
-          Small Banks</a></strong>, with Ansgar Walther.
+          Small Banks</a></strong>, with <a href="https://ansgarwalther.weebly.com/">Ansgar Walther</a>.
       <br />
       <em>Journal of Financial Economics</em>, Volume 136, Issue 1, April 2020, Pages 1–22. Lead article.
       <!-- <br /> -->
@@ -153,9 +161,9 @@
       <strong><a href="https://doi.org/10.1093/restud/rdz043" target="_blank">Link</a></strong> | <strong><a
           href="/research/bibtex/davila_exemptions.txt" target="_blank">BibTeX</a></strong>.
     </p>
-
+    
     <p><strong><a href="/research/bdks_beliefs_leverage.pdf" target="_blank">House Price Beliefs and Mortgage Leverage
-          Choice</a></strong>, with Michael Bailey, Theresa Kuchler, and Johannes Stroebel.
+          Choice</a></strong>, with <a href="https://scholar.google.com/citations?user=CF6_E90AAAAJ&hl=en">Michael Bailey</a>, <a href="https://pages.stern.nyu.edu/~tkuchler/">Theresa Kuchler</a>, and <a href="https://pages.stern.nyu.edu/~jstroebe/">Johannes Stroebel</a>.
       <br />
       <em>The Review of Economic Studies</em>, Volume 86, Issue 6, November 2019, Pages 2403–2452.
       <!-- <br /> -->
@@ -165,7 +173,7 @@
     </p>
 
     <p><strong><a href="/research/davila_korinek_pecuniary.pdf" target="_blank">Pecuniary Externalities in Economies
-          with Financial Frictions</a></strong>, with Anton Korinek.
+          with Financial Frictions</a></strong>, with <a href="https://www.korinek.com/">Anton Korinek</a>.
       <br />
       <em>The Review of Economic Studies</em>, Volume 85, Issue 1, 1 January 2018, Pages 352–395.
       <!-- <br /> -->
@@ -182,10 +190,6 @@
 
     <p><strong><a href="/research/davila_schaab_welfare_heterogeneous.pdf" target="_blank">Welfare Assessments with
       Heterogeneous Individuals</a></strong>, with Andreas Schaab, September 2024.  <strong><a href="https://github.com/schaab-lab/DS-weights" target="_blank">Github Repository</a></strong></p>
-
-    <p><strong><a href="/research/davila_parlatore_identifying.pdf" target="_blank">Identifying Price
-          Informativeness</a></strong>, with Cecilia Parlatore, September 2024. <!--Code and data are available <strong><a
-          href="https://github.com/edavila/identifying_price_informativeness" target="_blank">here</a></strong>. --> </p>
       
     <p><strong><a href="/research/davila_walther_corrective.pdf" target="_blank">Corrective Regulation with Imperfect
           Instruments</a></strong>, with Ansgar Walther, August 2024.</p>
