--- a/discussions.html
+++ b/discussions.html
@@ -68,6 +68,11 @@
 
     <h4> 2024 </h4>
     
+    <p><strong>Bankruptcy Exemption of Repo Markets: Too Much Today for Too Little Tomorrow?, <a
+      href="discussions/davila_discussion_aav.pdf" target="_blank">SLIDES</a></strong><br />
+    by Viral Acharya, V. Ravi Anshuman, and S. Viswanathan <br />
+    Minneapolis Fed Macroeconomic Policy Perspectives Conference, 2024</p>
+
     <p><strong>Exchange Controls as a Fiscal Instrument, <a
       href="discussions/davila_discussion_sgu_exchange_rates.pdf" target="_blank">SLIDES</a></strong><br />
     by Stephanie Schmitt-Grohé and Martín Uribe <br />
