--- a/research.html
+++ b/research.html
@@ -77,7 +77,7 @@
     <p><strong><a href="/research/davila_graves_parlatore_value_arbitrage.pdf" target="_blank">The Value of
       Arbitrage</a></strong>, with <a href="https://sites.google.com/view/daniel-graves/">Daniel Graves</a> and <a href="https://www.ceciliaparlatore.com/">Cecilia Parlatore</a>.
       <br />
-      <em>Journal of Political Economy</em>, Volume 114, Issue 6, June, 2024, Pages 1947-1993.
+      <em>Journal of Political Economy</em>, Volume 114, Issue 6, June 2024, Pages 1947-1993.
           <strong><a href="https://www.journals.uchicago.edu/doi/10.1086/728453" target="_blank">Link</a></strong> |
           <strong><a href="/research/bibtex/davila_graves_parlatore_arbitrage.txt" target="_blank">BibTeX</a></strong>.
     </p>
