--- a/index.html
+++ b/index.html
@@ -101,12 +101,6 @@
             <strong><a href="/research/davila_schaab_welfare_accounting.pdf" target="_blank">Welfare Accounting</a></strong>, with Andreas Schaab, October 2024.
           </li>
           <li> 
-            <strong><a href="/research/davila_schaab_welfare_heterogeneous.pdf" target="_blank">Welfare Assessments with Heterogeneous Individuals</a></strong>, with Andreas Schaab, September 2024.
-          </li>
-          <li> 
-            <strong><a href="/research/davila_parlatore_identifying.pdf" target="_blank">Identifying Price Informativeness</a></strong>, with Cecilia Parlatore, September 2024.
-          </li>
-          <li> 
             <strong><a href="/research/davila_walther_corrective.pdf" target="_blank">Corrective Regulation with Imperfect Instruments</a></strong>, with Ansgar Walther, August 2024.
           </li>
           <li> 
@@ -129,7 +123,7 @@
       <h6><a href="https://cowles.yale.edu/events/conferences/general-equilibrium/2024"> 18th Annual Conference on General Equilibrium and its Applications</a></h6> -->
 
       <p> <br></p>
-      <h5>Recent News</h5>
+      <h5>News</h5>
       <h6><a href="https://economics.yale.edu/news/241002/yale-economist-eduardo-davila-wins-banco-sabadell-foundation-award-economic-research"> Yale Economist Eduardo Dávila Wins Banco Sabadell Foundation Award for Economic Research</a></h6>      
       <h6><a href="https://cowles.yale.edu/news/240509/cowles-foundation-hosts-18th-annual-conference-general-equilibrium"> Cowles Hosts 18th Annual Conference on General Equilibrium</a></h6>      
       <h6><a href="https://economics.yale.edu/news/240506/yale-hosts-deposit-insurance-conference-offering-new-perspectives-research-and-policy"> Yale Hosts Deposit Insurance Conference</a></h6>
