--- a/research.html
+++ b/research.html
@@ -65,9 +65,17 @@
 
   <div class="container mt-5">
     <h2>Publications</h2>
+    
+    <p><strong><a href="/research/davila_schaab_welfare_heterogeneous.pdf" target="_blank">Welfare Assessments with
+      Heterogeneous Individuals</a></strong>, with <a href="https://www.andreasschaab.com/">Andreas Schaab</a>.
+      <br />
+      <em>Journal of Political Economy</em>, Forthcoming, November 2024.
+      <strong><a href="/research/bibtex/davila_parlatore_identifying.txt" target="_blank">BibTeX</a></strong>.
+    <strong><a href="https://github.com/schaab-lab/DS-weights" target="_blank">Github</a></strong>.
+  </p>
 
     <p><strong><a href="/research/davila_parlatore_identifying.pdf" target="_blank">Identifying Price
-      Informativeness</a></strong>, with <a href="https://www.ceciliaparlatore.com/">Cecilia Parlatore</a>.
+      Informativeness</a></strong>, with <a href="http://ceciliaparlatore.com/">Cecilia Parlatore</a>.
       <br />
       <em>Review of Financial Studies</em>, Conditionally Accepted, October 2024.
           <!-- <strong><a href="https://www.journals.uchicago.edu/doi/10.1086/728453" target="_blank">Link</a></strong> | -->
@@ -75,7 +83,7 @@
     </p>
 
     <p><strong><a href="/research/davila_graves_parlatore_value_arbitrage.pdf" target="_blank">The Value of
-      Arbitrage</a></strong>, with <a href="https://sites.google.com/view/daniel-graves/">Daniel Graves</a> and <a href="https://www.ceciliaparlatore.com/">Cecilia Parlatore</a>.
+      Arbitrage</a></strong>, with <a href="https://sites.google.com/view/daniel-graves/">Daniel Graves</a> and <a href="http://ceciliaparlatore.com/">Cecilia Parlatore</a>.
       <br />
       <em>Journal of Political Economy</em>, Volume 114, Issue 6, June 2024, Pages 1947-1993.
           <strong><a href="https://www.journals.uchicago.edu/doi/10.1086/728453" target="_blank">Link</a></strong> |
@@ -113,7 +121,7 @@
     </p>
 
     <p><strong><a href="/research/davila_parlatore_volatility.pdf" target="_blank">Volatility and
-          Informativeness</a></strong>, with <a href="https://www.ceciliaparlatore.com/">Cecilia Parlatore</a>.
+          Informativeness</a></strong>, with <a href="http://ceciliaparlatore.com/">Cecilia Parlatore</a>.
       <br />
       <em>Journal of Financial Economics</em>, Volume 147, Issue 3, March 2023, Pages 550–572.
       <!-- <br /> -->
@@ -133,7 +141,7 @@
     </p>
 
     <p><strong><a href="/research/davila_parlatore_trading_costs.pdf" target="_blank">Trading Costs and Informational
-          Efficiency</a></strong>, with <a href="https://www.ceciliaparlatore.com/">Cecilia Parlatore</a>.
+          Efficiency</a></strong>, with <a href="http://ceciliaparlatore.com/">Cecilia Parlatore</a>.
       <br />
       <em>The Journal of Finance</em>, Volume 76, Issue 3, June 2021, Pages 1471-1539.
       <!-- <br /> -->
@@ -187,9 +195,6 @@
     </p>
 
     <h2 id="under-revision">Under Revision</h2>
-
-    <p><strong><a href="/research/davila_schaab_welfare_heterogeneous.pdf" target="_blank">Welfare Assessments with
-      Heterogeneous Individuals</a></strong>, with Andreas Schaab, September 2024.  <strong><a href="https://github.com/schaab-lab/DS-weights" target="_blank">Github Repository</a></strong></p>
       
     <p><strong><a href="/research/davila_walther_corrective.pdf" target="_blank">Corrective Regulation with Imperfect
           Instruments</a></strong>, with Ansgar Walther, August 2024.</p>
@@ -199,14 +204,17 @@
 
     <h2 id="working-papers">Working Papers</h2>
 
+    <p><strong><a href="/research/davila_schaab_intergenerational_welfare_assessments.pdf" target="_blank">Intergenerational Welfare Assessments</a></strong>,
+      with Sergi Barcons and Andreas Schaab, August 2024 (draft coming soon).</p>
+
     <p><strong><a href="/research/davila_schaab_welfare_accounting.pdf" target="_blank">Welfare Accounting</a></strong>,
       with Andreas Schaab, October 2024.</p>
 
     <p><strong><a href="/research/davila_schaab_non_envelope_theorem.pdf" target="_blank">A Non-Envelope Theorem with Linearly Homogeneous Constraints</a></strong>,
       with Andreas Schaab, October 2024.</p>
 
-    <p><strong><a href="/research/davila_schaab_intergenerational_welfare_assessments.pdf" target="_blank">Intergenerational Welfare Assessments</a></strong>,
-      with Sergi Barcons and Andreas Schaab, August 2024 (draft coming soon).</p>
+    <p><strong><a href="/research/davila_parlatore_walther_probability_pricing.pdf" target="_blank">Probability Pricing and the Value of Information</a></strong>,
+      with Cecilia Parlatore and Ansgar Walther, November 2024 (draft coming soon).</p>
 
     <p><strong><a href="/research/davila_fourakis_weymuller_optimal_joint_bond.pdf" target="_blank">Optimal Joint Bond
       Design</a></strong>, with Stelios Fourakis and Charles-Henri Weymuller, April 2024 (substantially revised draft coming soon).</p>
