--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
         </ul>
       </p>
 
-      <p> <br></p>
+      <!-- <p> <br></p> -->
 
-      <h6> <p style="text-align: center;"><a href="input/davila_predoc.pdf"> Pre-Doc Posting</a></p></h6> 
+      <!-- <h6> <p style="text-align: center;"><a href="input/davila_predoc.pdf"> Pre-Doc Posting</a></p></h6>  -->
 
       <!-- <p> <br></p> -->
 
