--- a/research.html
+++ b/research.html
@@ -77,7 +77,7 @@
     <p><strong><a href="/research/davila_parlatore_identifying.pdf" target="_blank">Identifying Price
       Informativeness</a></strong>, with <a href="http://ceciliaparlatore.com/">Cecilia Parlatore</a>.
       <br />
-      <em>Review of Financial Studies</em>, Conditionally Accepted, October 2024.
+      <em>Review of Financial Studies</em>, Forthcoming, December 2024.
           <!-- <strong><a href="https://www.journals.uchicago.edu/doi/10.1086/728453" target="_blank">Link</a></strong> | -->
           <strong><a href="/research/bibtex/davila_parlatore_identifying.txt" target="_blank">BibTeX</a></strong>.
     </p>
