--- a/index.html
+++ b/index.html
@@ -97,8 +97,11 @@
         <h5>New and recently updated drafts</h5>
 
         <ul class="list-style-type:circle">
+          <li>
+            <strong><a href="/research/davila_schaab_intergenerational_welfare_assessments.pdf" target="_blank">Intergenerational Welfare Assessments</a></strong>, with Sergi Barcons and Andreas Schaab, January 2025.
+          </li>
           <li> 
-            <strong><a href="/research/davila_schaab_welfare_accounting.pdf" target="_blank">Welfare Accounting</a></strong>, with Andreas Schaab, October 2024.
+            <strong><a href="/research/davila_schaab_welfare_accounting.pdf" target="_blank">Welfare Accounting</a></strong>, with Andreas Schaab, January 2025.
           </li>
           <li> 
             <strong><a href="/research/davila_walther_corrective.pdf" target="_blank">Corrective Regulation with Imperfect Instruments</a></strong>, with Ansgar Walther, August 2024.
