--- a/research.html
+++ b/research.html
@@ -70,8 +70,8 @@
       Heterogeneous Individuals</a></strong>, with <a href="https://www.andreasschaab.com/">Andreas Schaab</a>.
       <br />
       <em>Journal of Political Economy</em>, Forthcoming, November 2024.
-      <strong><a href="/research/bibtex/davila_parlatore_identifying.txt" target="_blank">BibTeX</a></strong>.
-    <strong><a href="https://github.com/schaab-lab/DS-weights" target="_blank">Github</a></strong>.
+      <strong><a href="/research/bibtex/davila_parlatore_identifying.txt" target="_blank">BibTeX</a></strong> |
+    <strong><a href="https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/Y7Z2QF" target="_blank">Code</a></strong>.
   </p>
 
     <p><strong><a href="/research/davila_parlatore_identifying.pdf" target="_blank">Identifying Price
