--- a/research.html
+++ b/research.html
@@ -69,8 +69,8 @@
     <p><strong><a href="/research/davila_schaab_welfare_heterogeneous.pdf" target="_blank">Welfare Assessments with
       Heterogeneous Individuals</a></strong>, with <a href="https://www.andreasschaab.com/">Andreas Schaab</a>.
       <br />
-      <em>Journal of Political Economy</em>, Forthcoming, November 2024.
-      <strong><a href="/research/bibtex/davila_parlatore_identifying.txt" target="_blank">BibTeX</a></strong> |
+      <em>Journal of Political Economy</em>, Volume 133, Issue 9, September 2025.
+      <strong><a href="/research/bibtex/davila_schaab_welfare_assessments.txt" target="_blank">BibTeX</a></strong> |
     <strong><a href="https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/Y7Z2QF" target="_blank">Code</a></strong>.
   </p>
 
@@ -197,7 +197,7 @@
     <h2 id="under-revision">Under Revision</h2>
       
     <p><strong><a href="/research/davila_walther_corrective.pdf" target="_blank">Corrective Regulation with Imperfect
-          Instruments</a></strong>, with Ansgar Walther, August 2024.</p>
+          Instruments</a></strong>, with Ansgar Walther, April 2025.</p>
 
     <p><strong><a href="/research/davila_schaab_optimal_mp_hank.pdf" target="_blank">Optimal Monetary Policy with
       Heterogeneous Agents: Discretion, Commitment, and Timeless Policy</a></strong>, with Andreas Schaab, February 2023.</p>
